Fixed Alignment Issue

--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,11 @@
 .card-wrapper {
   width: 250px;
   height: 180px;
-  margin-right: 10px;
+  margin-right: 15px;
   box-shadow: 0px 3px 30px #a5a5a5;
   display: flex;
   flex-direction: column;
+  border-radius: 8px;
 }
 
 .card-top {
@@ -49,10 +50,11 @@
 .card-header {
   margin-top: 10px;
   margin-bottom: 10px;
-  max-width: 80px;
+  max-width: 100px;
   height: 30px;
-  padding: 2px 2px !important;
+  padding: 5px 5px !important;
   text-align: center;
+  border-radius: 20px !important;
 }
 
 .location-container {
@@ -62,4 +64,16 @@
   flex-wrap: wrap;
   background-color: #f6f7f8;
   padding: 40px 100px;
+}
+
+.icons-location {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+}
+
+.code {
+  text-align: center;
+  margin-top: 25px;
+  color: grey;
 }
